// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<withScriptjs(withGoogleMap(StaticGoogleMap))
  containerElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  googleMapURL="https://maps.googleapis.com/maps/api/js?v=3.exp&key=undefined"
  loadingElement={
    <div
      className="entity-map"
    >
      <Loader
        size="large"
        type="default"
      />
    </div>
  }
  mapElement={
    <div
      className="entity-map"
    />
  }
  onPinClick={[Function]}
  pin={
    Object {
      "lat": 2,
      "lng": 4,
    }
  }
  userLocation={
    Object {
      "lat": 6,
      "lng": 8,
    }
  }
  zoom={14}
/>
`;

exports[`should render correctly when there is no user location 1`] = `
<withScriptjs(withGoogleMap(StaticGoogleMap))
  containerElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  googleMapURL="https://maps.googleapis.com/maps/api/js?v=3.exp&key=undefined"
  loadingElement={
    <div
      className="entity-map"
    >
      <Loader
        size="large"
        type="default"
      />
    </div>
  }
  mapElement={
    <div
      className="entity-map"
    />
  }
  onPinClick={[Function]}
  pin={
    Object {
      "lat": 2,
      "lng": 4,
    }
  }
  zoom={14}
/>
`;
